[NEW + FIX] fixed inital camera orientation + alignment button component

--- a/app/src/pages/AugmentedReality/AugmentedReality.css
+++ b/app/src/pages/AugmentedReality/AugmentedReality.css
@@ -24,16 +24,3 @@
     opacity: 0.6;
     width: 100%;
 }
-
-.alignedBtn{
-    position: absolute;
-    bottom: 12%;
-    background-color: var(--main-color);
-    border: none;
-    color: var(--white);
-    padding: 15px;
-    font-size: 20px;
-    border-radius: 5%;
-    z-index: 99;
-    font-family:"Lexend Deca";
-}
